[tool.poetry]
name = "nurse"
version = "0.5.0"
description = "A thoughtful dependency injection framework 💉"
authors = ["ducdetronquito <g.paulet@zero-gachis.com>"]

readme = "README.rst"

repository = "https://github.com/ZeroGachis/nurse"
homepage = "https://github.com/ZeroGachis/nurse"
keywords = ["dependency", "injection"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "*", allow-prereleases = true }

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
