[tool.poetry]
name = "nurse"
version = "0.5.1"
description = "A thoughtful dependency injection framework 💉"
authors = ["ducdetronquito <g.paulet@zero-gachis.com>"]

readme = "README.rst"

repository = "https://github.com/ZeroGachis/nurse"
homepage = "https://github.com/ZeroGachis/nurse"
keywords = ["dependency", "injection"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
