[tool.poetry]
name = "nurse"
version = "0.6.0"
description = "A thoughtful dependency injection framework"
authors = ["ducdetronquito <g.paulet@zero-gachis.com>"]

readme = "README.rst"

repository = "https://github.com/ZeroGachis/nurse"
homepage = "https://github.com/ZeroGachis/nurse"
keywords = ["dependency", "injection"]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.7.3"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
pyright = "^1.1.388"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "./"

[tool.coverage.run]
branch = true
relative_files = true
source = ["nurse"]

[tool.ruff]
# Use black default line length to avoid to many changes at first
line-length = 88
# It would be preferable to use python's standard "project.requires-python"
# but poetry does not comply with it.
target-version = "py311"


[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["nurse/**"]
exclude = ["**/__pycache__"]

executionEnvironments = [{ root = "nurse" }]
